--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:joel-fragoso/node-clean-arch.git",
   "author": "Joel Fragoso <joelfragoso85@icloud.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "standard": "^17.0.0"
+  }
 }
