--- a/package.json
+++ b/package.json
@@ -5,7 +5,20 @@
   "repository": "git@github.com:joel-fragoso/node-clean-arch.git",
   "author": "Joel Fragoso <joelfragoso85@icloud.com>",
   "license": "MIT",
+  "lint-staged": {
+    "*.js": [
+      "standard --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
-    "standard": "^17.0.0"
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "standard": "^14.3.1"
   }
 }
