--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:joel-fragoso/node-clean-arch.git",
   "author": "Joel Fragoso <joelfragoso85@icloud.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "lint-staged": {
     "*.js": [
       "standard --fix",
@@ -18,6 +21,7 @@
   },
   "devDependencies": {
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "standard": "^14.3.1"
   }
