--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Joel Fragoso <joelfragoso85@icloud.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest --watchAll",
-    "test:staged": "jest --passWithNoTests"
+    "test": "jest --watch --silent --colors --noStackTrace --coverage=false",
+    "test:staged": "jest --passWithNoTests --findRelatedTests --silent --noStackTrace"
   },
   "standard": {
     "env": ["jest"]
