--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --watch --silent --colors --noStackTrace --coverage=false",
-    "test:staged": "jest --passWithNoTests --findRelatedTests --silent --noStackTrace"
+    "test:staged": "jest --passWithNoTests --findRelatedTests --silent --noStackTrace --coverage=false",
+    "test:ci": "jest --coverage"
   },
   "standard": {
     "env": ["jest"]
