--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "jest --watch --silent --colors --noStackTrace --coverage=false",
     "test:staged": "jest --passWithNoTests --findRelatedTests --silent --noStackTrace --coverage=false",
-    "test:ci": "jest --coverage"
+    "test:ci": "jest --coverage --silent --noStackTrace"
   },
   "standard": {
     "env": ["jest"]
