--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --silent --colors --noStackTrace --passWithNoTests --coverage=false",
-    "test:unit": "yarn test --watch",
+    "test:unit": "yarn test --watch -c jest-unit-config.js",
+    "test:integration": "yarn test --watch -c jest-integration-config.js",
     "test:staged": "yarn test --findRelatedTests ./src",
     "test:ci": "yarn test --coverage"
   },
